A few less Guava uses